# pycross-org.github.io

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  lock.json  pyproject.toml
.github/workflows/: ci.yml  contrib.yml  docs.yml  high.yml  release.yml
docs/: conf.py  pyproject.toml
requirements/: dev.in  sync.in
scripts/: Sync-Py.ps1  pyproject.toml
scripts/pycross_github_io_tools/: __main__.py  sync.py
src/pycross_github_io/: __init__.py
tests/: pyproject.toml
tests/pycross_github_io_tests/: test_pycross_github_io.py
