[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "pycross_github_io_tools"
version = "0.0.0"
description = "Tools."
dependencies = ["cyclopts==2.4.2"]
[project.scripts]
pycross_github_io_tools = "pycross_github_io_tools.__main__:main"

[tool.fawltydeps]
actions = ["check_undeclared"]
